log
ju., 27 de mar. de 2025 20:10:06: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
25021aa
ju., 27 de mar. de 2025 20:30:06: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
fe874e1
ju., 27 de mar. de 2025 21:13:18: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
765d801
vi., 28 de mar. de 2025 21:09:45: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:71:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:74:34: error: 'return' with a value, in function returning void [-Werror]
     if(nuevoNodo == NULL) return NULL;
                                  ^~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
db97c84
